--- a/index.html
+++ b/index.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
-    
+    <footer>
+        <div class="cont position-relative">
+            <div class="row d-flex container-1 bg-dark">
+                <div class="c-1 text-white">
+                    <h3 class="mc">
+                        <span>McLAREN</span>
+                        CORPORATE
+                    </h3>
+                    <div class="m-5 d-flex list">
+                        <ul class="row list1 ">
+                            <li>Partners </li>
+                            <li>Careers</li>
+                            <li>Media</li>
+                        </ul>
+                        <ul class="p-l-4 ">
+                            <li>McLaren Group</li>
+                            <li>McLaren Racing </li>
+                            <li>McLaren Applied </li>
+                            <li>Investors</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="c-2">
+                    <div>
+                        <img class="svg" src="/mclaren-alt.svg" alt="#">
+                    </div>
+                    <div class=" c-2-2 d-flex justify-content-around">
+                        <li>COOKIE POLICY</li>
+                        <li>GENDER GAP REPORT</li>
+                        <li>PRIVACY POLICY</li>
+                        <li>TERMS AND CONDITIONS</li>
+                        <li>ANTI-SLAVERY STATEMENT</li>
+                    </div>
+                </div>
+            </div>
+            <div class="container-2 position-absolute bottom-0 end-0">
+                <div class="contt">
+                <div class="cont">
+                    <span>CONTACT</span>
+                    <ul>
+                        <li>Contact us </li>
+                        <li>Enquire</li>
+                        <li>Find a retailer</li>
+                        <li>Roadside assistance</li>
+                    </ul>
+                </div>
+                <div class="foll ">
+                    <span class="d-block">FOLLOW US </span>
+                    <div class="d-flex">
+                        <ul>
+                            <li>Facebook</li>
+                            <li>Instagram</li>
+                        </ul>
+                        <ul>
+                            <li>Youtube</li>
+                            <li>Twitter</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </footer>
 </body>
+
 </html>
